Added info in readme

--- a/CEjQT.vcxproj
+++ b/CEjQT.vcxproj
@@ -160,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="pythonCode.py" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
