--- a/CEjQT.vcxproj.filters
+++ b/CEjQT.vcxproj.filters
@@ -109,5 +109,8 @@
     <None Include="pythonCode.py">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="README.md">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
